--- a/client/src/locale/messages.es.xlf
+++ b/client/src/locale/messages.es.xlf
@@ -648,7 +648,7 @@
         </context-group>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/core/shared/navbar/containers/navbar.component.html</context>
-          <context context-type="linenumber">34,35</context>
+          <context context-type="linenumber">37</context>
         </context-group>
       </trans-unit>
       <trans-unit id="1b2fa65763b744291e832a3c5fa0ce8641da2911" datatype="html">
@@ -660,9 +660,17 @@
         </context-group>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/core/shared/navbar/containers/navbar.component.html</context>
-          <context context-type="linenumber">37,38</context>
+          <context context-type="linenumber">40,41</context>
         </context-group>
       </trans-unit>
+      <trans-unit id="fe46ccaae902ce974e2441abe752399288298619" datatype="html">
+        <source>Language</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/core/shared/navbar/containers/navbar.component.html</context>
+          <context context-type="linenumber">35</context>
+        </context-group>
+      </trans-unit>
+      
       <trans-unit id="install_button" datatype="html">
         <source>Install</source>
         <target>Instalar</target>
