--- a/client/src/locale/messages.xlf
+++ b/client/src/locale/messages.xlf
@@ -452,6 +452,33 @@
       <trans-unit id="3df1ed65c6790c3e752a7b1767a8916b3d09de0f" datatype="html">
         <source>I am already registered, I want going back.</source>
       </trans-unit>
+      <trans-unit id="180cbbc855314cc56905b57ad77d981d70ff5c52" datatype="html">
+        <source>Send us your query anytime!</source>
+      </trans-unit>
+      <trans-unit id="33f46beae629773ad255e544725fff33320bd732" datatype="html">
+        <source>Get in Touch</source>
+      </trans-unit>
+      <trans-unit id="573aa2d5e345bba90280c79969dc0e9a781a26bc" datatype="html">
+        <source>Enter email address</source>
+      </trans-unit>
+      <trans-unit id="620ba8f74432771cec99850c63742aa11e19be33" datatype="html">
+        <source>Enter your name</source>
+      </trans-unit>
+      <trans-unit id="79808490a9d863954a8070d377d889fc0963515c" datatype="html">
+        <source>Not available yet</source>
+      </trans-unit>
+      <trans-unit id="7d175f1b7310aecce08c1141c9ba8588b8642a99" datatype="html">
+        <source>Send Message</source>
+      </trans-unit>
+      <trans-unit id="91943b47b5359a9ab3e474ee0443817378100cc4" datatype="html">
+        <source>Enter Subject</source>
+      </trans-unit>
+      <trans-unit id="9780fc3d4a4f60a27b2644620704fb48cb9cdb86" datatype="html">
+        <source>Enter Message</source>
+      </trans-unit>
+      <trans-unit id="d6bbf648820068c3a29583083524d7c848aa5773" datatype="html">
+        <source>📍 Spain.</source>
+      </trans-unit>
     </body>
   </file>
 </xliff>
